align buttons; fix no-rerender problem with gear button

--- a/protocol-designer/src/components/StepEditForm/StepEditForm.css
+++ b/protocol-designer/src/components/StepEditForm/StepEditForm.css
@@ -71,10 +71,6 @@
   margin-top: 0.5rem;
 }
 
-.form_footer {
-  margin: 2rem 0 1rem 0;
-}
-
 .form_button {
   width: 6.25rem;
 }
@@ -192,15 +188,21 @@
 
 .disposal_vol_wrapper {
   min-height: 3.5rem;
+  margin-bottom: 1rem;
 }
 
-.multi_dispense_options {
-  /* TOD IMMEDIATELY: remove */
-  /* min-width: 14.25rem; */
-}
-
-@media screen and (max-width: 1279px) {
-  .form_row {
-    flex-wrap: wrap;
+@media screen and (max-width: 1000px) {
+  .section_wrapper {
+    flex-direction: column;
   }
+
+  .section_right {
+    border-left: none;
+  }
+}
+
+.button_row {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 0 0.5rem 0;
 }
